# UdeAStay

Program/: CMakeLists.txt  CMakePresets.json
Program/src/: accommodations.txt  guests.txt  hosts.txt  main.cpp  reservations.txt
Program/src/Actors/: accommodation.cpp  accommodation.h  accommodations.cpp  accommodations.h  guest.cpp  guest.h  host.cpp  host.h  reservation.cpp  reservation.h
Program/src/DataStructure/: list.h  string.h
Program/src/FileSystem/: fileSystem.cpp  fileSystem.h
Program/src/Utils/: ConUtils.cpp  ConUtils.h  date.h  metrics.h
Report/: Informe Inicial - Sistema UdeAStay.md
